# ebyte-e32-433t30d-configurator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-07-04-gui-and-compile.md
docs/superpowers/specs/: 2026-07-03-e32config-design.md  2026-07-04-gui-and-compile-design.md
scripts/: build.py
src/e32config/: __init__.py  __main__.py  app.py  gui.py  protocol.py  transport.py  uimodel.py
tests/: test_gui_smoke.py  test_protocol.py  test_uimodel.py
